@@ -1,0 +1,6 @@
+if GENERATED_DOC
+
+doc:
+	doxygen
+
+endif
